--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ idea/*
 .idea/Carola.iml
 .idea/encodings.xml
 .idea/workspace.xml
+.idea/Carola.iml
+.idea/Carola.iml
+.idea/encodings.xml
+.idea/workspace.xml
