--- a/web/.htaccess
+++ b/web/.htaccess
@@ -2,7 +2,7 @@
     Options -MultiViews
  
     RewriteEngine On
-    #RewriteBase /ruta/hasta/tu/aplicacion
+    RewriteBase /carola
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
