--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,10 @@
         "neutron/sphinxsearch-api": "dev-master",
         "verdet/sphinxsearch-bundle": "dev-master",
         "verdet/silex-sphinxsearch": "dev-master"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
     }
 }
